[gd_scene load_steps=4 format=3 uid="uid://cgn33hapiem0c"]

[ext_resource type="Script" path="res://addons/Editor Debugger/dock.gd" id="1_al52d"]
[ext_resource type="Texture2D" uid="uid://1xd4xjuk1awb" path="res://addons/Editor Debugger/reload.png" id="2_bcwhv"]

[sub_resource type="Texture2D" id="Texture2D_mc8jn"]
resource_local_to_scene = false
resource_name = ""

[node name="Dock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_al52d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 47.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
offset_top = 8.0
offset_right = 1152.0
offset_bottom = 47.0
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
offset_right = 317.0
offset_bottom = 31.0
theme_override_constants/separation = 8

[node name="ShowInInspectionCheckButton" type="CheckButton" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 194.0
offset_bottom = 31.0
tooltip_text = "在检查器中显示选择的节点的属性
"
text = "Show in Inspection"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
offset_left = 202.0
offset_right = 242.0
offset_bottom = 31.0

[node name="HighlightColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 40.0
offset_bottom = 31.0
text = "ssss"
color = Color(0, 0, 1, 0.2)

[node name="HighlightColorResetButton" type="TextureButton" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2i(32, 0)
layout_mode = 2
offset_left = 44.0
offset_right = 76.0
offset_bottom = 31.0
texture_normal = ExtResource("2_bcwhv")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
offset_left = 250.0
offset_right = 317.0
offset_bottom = 31.0

[node name="AnimationTimeSpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 67.0
offset_bottom = 31.0
theme_override_icons/updown = SubResource("Texture2D_mc8jn")
step = 0.01
value = 0.01
allow_greater = true
custom_arrow_step = 0.05

[node name="AnimationTimeResetButton" type="TextureButton" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2i(32, 0)
layout_mode = 2
offset_left = 71.0
offset_right = 103.0
offset_bottom = 31.0
texture_normal = ExtResource("2_bcwhv")
stretch_mode = 5

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
offset_top = 47.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
columns = 2
allow_rmb_select = true

[node name="PopupMenu" type="PopupMenu" parent="."]
size = Vector2i(123, 35)
hide_on_state_item_selection = true
allow_search = false
item_count = 1
item_0/text = "Save Branch"
item_0/id = 0

[node name="SaveBranchFileDialog" type="FileDialog" parent="."]
size = Vector2i(343, 159)
ok_button_text = "保存"
